create-dep-withnodeselector-appa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        app: appa
      containers:
      - name: nginx
        resources:
          limits:
            cpu: 0.1 
        image: nginx:1.7.9
        ports:
        - containerPort: 80
