testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    resources:
      limits:
        cpu: 0.1 
    command:
      - sleep
      - "3600"
