ns_appa_tol_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: ["","apps","extensions"]
        kinds: ["Deployment"]
  parameters:
    nsname: "app-a"
    allowedtols: "appa"
